[package]
name = "multiplayer-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
hashbrown = "0.12.3"
postcard = { version = "1.0.2", features = ["postcard-derive", "use-std", "alloc"] }
serde = "1.0.145"
multiplayer-test-macros ={ path = "./multiplayer-test-macros" }
tokio = "1.21.2"
tokio-rustls = "0.23.4"
crossbeam-channel = "0.5.6"

[features]

[workspace]
members = ["multiplayer-test-macros"]
