[package]
name = "multiplayer-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
postcard = { version = "1.0.2", features = [
	"postcard-derive",
	"use-std",
	"alloc",
] }
serde = "1.0.147"
# multiplayer-test-macros = { path = "./multiplayer-test-macros" }
tokio = { version = "1.21.2", features = [
	"net",
	"io-util",
	"rt",
	"rt-multi-thread",
	"macros",
	"time",
] }
erased-serde = "0.3.23"
once_cell = "1.16.0"
# webpki-roots = "0.22.5"
# oneshot = "0.1.5"
# futures = "0.3.25"
async-channel = "1.7.1"
thiserror = "1.0.37"
dashmap = "5.4.0"
rand = "0.8.5"
assert-in-order = { version = "0.1.0", path = "assert-in-order" }
lazy_static = "1.4.0"

[workspace]
members = ["multiplayer-test-macros", "assert-in-order"]

[features]
